    - Increase levels in upper two tiers of inventory size upgrades from 2 to 4, this is to compensate for the lack of toolbelt research.
    - Reduced the levels per tier of player reach from 4 to 3, the base game now has a reach of 10, instead of 6.
    - Crafting speed, player mining speed, player reach's higher tier researches now requires production instead of utility science packs.
  Removed:
    - Toolbelt upgrades (this is now in the base game under Options => Interface => Active quickbars).
    - Settings to disable a particular category, this setting was rather redundant and confusing.
---------------------------------------------------------------------------------------------------
Version: 2.2.6
Date: 11. 06. 2018
  Bugfixes:
    - Fixed typo which caused infinite research for inventory space to be 10 times as expensive. Thanks to Doublespin for reporting and fixing!
---------------------------------------------------------------------------------------------------
Version: 2.2.5
Date: 10. 05. 2018
  Bugfixes:
    - Apply bonuses from settings when starting a new campaign.
---------------------------------------------------------------------------------------------------
Version: 2.2.4
Date: 05. 03. 2018
  Changes:
    - Add explanation to internal technologies. Still waiting for a response from the devs.
---------------------------------------------------------------------------------------------------
Version: 2.2.3
Date: 28. 01. 2018
  Features:
    - Added character logistic request slot bonuses.
    - Added ability to specify prerequisites in custom config (see config.lua).
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 27. 01. 2018
  Changes:
    - Release 0.15 compatible version.
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 25. 01. 2018
  Features:
    - Added flag to disable infinite research.